<resources>

	<string name="app_name" translatable="false">Shikaku</string>
	<string name="button_randomLevel_text">Random level</string>
	<string name="button_selectLevel_text">Select level</string>
	<string name="menuItem_about_title">About this app</string>
	<string name="textView_author_text">Created by Matěj Chmel</string>
	<string name="textView_github_text">Source code is available at GitHub.</string>
	<string name="imageView_github_contentDescription">View code on GitHub.</string>
	<string name="exception_noLevels">No levels are available.</string>
	<string name="exception_databaseError">Database error.</string>
	<string name="exception_noStandardLevels">Standard levels are not available.</string>
	<string name="textView_levelDimensions_placeholder" translatable="false">5x5</string>
	<string name="imageView_levelPreview_contentDescription">Level preview.</string>
	<string name="button_nextLevel_text">Next level</string>
	<string name="floatingButton_list_createLevel_contentDescription">Create new level.</string>
	<string name="floatingButton_saveLevel_contentDescription">Save level.</string>
	<string name="switch_eraser_text">Eraser</string>
	<string name="button_clearEditor">Clear all</string>
	<string name="floatingButton_backToEditor_contentDescription">Back to editor.</string>
	<string name="menuItem_resetLevels_title">Reset to defaults</string>
	<string name="toast_saveLevel">To save your level, you must complete it first.</string>
	<string name="stopWatch_placeholder" translatable="false">0.0 s</string>
	<string name="toast_newBestTime">You beat the record!</string>
	<string name="stopWatch_notAttempted">Not attempted</string>
	<string name="editNumber_fieldValue_hint">Enter field value.</string>
	<string name="confirm">OK</string>
	<string name="toast_fieldValue_tooHigh">Value cannot be higher than %d.</string>
	<string name="toast_fieldValue_one">Value cannot be 1.</string>
	<string name="button_main_createLevel_text">Create level</string>
	<string name="menuItem_restart_title" translatable="false">Restart</string>
	<string name="menuItem_resize_title">Resize</string>
	<string name="textView_chooseDimensions_text" translatable="false">x</string>
	<string name="toast_dimension_tooHigh">No dimension can be higher than %d.</string>
	<string name="toast_dimension_oneTotalSpace">Level cannot consist of only one field.</string>
	<string name="toast_dimension_notValid">The dimension value is not valid.</string>
	<string name="button_soundWrong_text">Error</string>
	<string name="button_soundCorrect_text">Correct</string>
	<string name="button_soundRemove_text">Remove</string>
	<string name="button_soundVictory_text">Victory</string>
	<string name="button_soundNewBestTime_text">New record</string>
	<string name="menuItem_soundTest_title">Test sounds</string>
	<string name="exception_soundError">Error occurred when loading sounds.</string>

</resources>
