<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/imageView_levelPreview"
		android:layout_width="164dp"
		android:layout_height="164dp"
		android:contentDescription="@string/imageView_levelPreview_contentDescription"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.064"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.036"
		app:srcCompat="@drawable/ic_shikaku_background" />

	<TextView
		android:id="@+id/textView_levelDimensions"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/textView_levelDimensions_placeholder"
		android:textAlignment="center"
		android:textSize="36sp"
		app:layout_constraintBottom_toBottomOf="@+id/imageView_levelPreview"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.912"
		app:layout_constraintStart_toEndOf="@+id/imageView_levelPreview"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0" />

	<TextView
		android:id="@+id/textView_levelItem_bestTime"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/stopWatch_placeholder"
		android:textAlignment="center"
		android:textSize="36sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.921"
		app:layout_constraintStart_toEndOf="@+id/imageView_levelPreview"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.028" />
</androidx.constraintlayout.widget.ConstraintLayout>
